# SnapOCR

./: README.md  SnapOCR-一键安装.bat  pyproject.toml
snapocr/: __init__.py  __main__.py
snapocr/core/: config.py  ocr_engine.py  translator.py
snapocr/gui/: app.py  highlight.py  screenshot.py  settings.py
